# tauri-gobang

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  DEBUG.md  DEVELOPMENT_LOG.md  EXPLORE_SUMMARY.md  INTEGRATION_CHECKLIST.md  LICENSE  RAPI_INTEGRATION.md  RAPI_INTEGRATION_COMPLETE.md  README.md  flake.nix  index.html  install-android-sdk.sh  package.json  pnpm-lock.yaml  result  vite.config.ts
docs/: ANDROID_EMULATOR_GUIDE.md  ANDROID_RAPFI_ARCHITECTURE.md  ANDROID_RAPFI_BUILD.md  ANDROID_RAPFI_BUILD_NOTES.md  ANDROID_RAPFI_IMPLEMENTATION_PLAN.md  ANDROID_RAPFI_QUICK_REFERENCE.md  ANDROID_RAPFI_REBUILD_GUIDE.md  BUILTIN_AI_REMOVED.md  BUNDLED_ENGINE.md  EMULATOR_INTEGRATION_COMPLETE.md  NIX_QUICKREF.md  NIX_SETUP_SUMMARY.md  PATCH_MAINTENANCE.md  QUICK_START.md  RAPI_SETUP.md  SIDECAR_INTEGRATION.md
patches/: README.md
scripts/: apply-rapfi-patches.sh  build-android-rapfi.sh  create-android-avd.sh  ensure-submodules.sh  revert-rapfi-patches.sh  setup-rapfi-source.sh  sync-weights-from-networks.sh  test-online.sh  verify-android-emulator.sh  verify-nix-env.sh
server/: Cargo.toml  Dockerfile  GITHUB_ACTIONS_GUIDE.md  README.md  build.sh
server/deploy/: gobang-server.service
server/migrations/: init.sql
server/src/: auth.rs  db.rs  logging.rs  main.rs  room.rs  types.rs  ws.rs
server/src/protocol/: game.rs
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  build-rapfi-android.sh  build-rapfi-arm64.sh  build.rs  download-sidecar.bat  download-sidecar.sh  tauri.conf.json  test_ai  test_ai.rs  test_ai_full.sh  test_rapfi_protocol.sh
(+119 files in other folders)
