[package]
name = "gobang-server"
version = "0.1.0"
edition = "2021"
description = "Gobang game server with WebSocket relay and room management"
license = "GPL-3.0"

[[bin]]
name = "gobang-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"], default-features = false }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.production]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
